@@ -46,6 +46,7 @@ Some brief, high-level features include:
 * State values of any data type
 * Dynamically-generated state values
 * Inheritance
+* Internationalization
 * GraphViz visualization creator
 
 Examples of the usage patterns for some of the above features are shown below.
@@ -446,3 +447,4 @@ dependencies are listed below.
 * ActiveRecord[http://rubyonrails.org] integration: 2.1.0 or later
 * DataMapper[http://datamapper.org] integration: 0.9.0 or later
 * Sequel[http://sequel.rubyforge.org] integration: 2.8.0 or later
+* i18n[http://github.com/svenfuchs/i18n] support (when used outside of ActiveRecord): 0.1.1 or later
