@@ -1,5 +1,6 @@
 == master
 
+* Add i18n support for ActiveRecord validation errors
 * Add a validation error when failing to transition for ActiveRecord / DataMapper / Sequel integrations
 
 == 0.6.0 / 2009-03-03
